# MSBakcyl

./: README.md
Include/: List.hpp  zadanie10.hpp
Source/: List.cpp
Zadanie_Listy-master/: CMakeLists.txt  main.cpp
Zadanie_Listy-master/Combat/Include/: List.hpp
Zadanie_Listy-master/Combat/Test/: ListTest.cpp
